feat: add address documentation
